# lambdastream

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
benchmarks/: wordcount.py
cmake-modules/: Dependencies.cmake
lambdastream/: __init__.py  channel.py  config.py  constants.py  context.py  dag.py  executor.py  operator.c  operator.pyx  state.py  stream.py  utils.py  wordcount.py  wordcount_ops.cpp  wordcount_ops.pyx
lambdastream/aws/: config.py  lambda_handler.py  s3_backend.py  utils.py
lambdastream/channels/: channel.py  jiffy_channel.py  local_channel.py  redis_channel.py
lambdastream/executors/: __init__.py  dummy_lambda_executor.py  executor.py  lambda_executor.py  local_executor.py  process_executor.py  ray_executor.py
operator/: __init__.py  operator.pyx  utils.py  wordcount.py
operator/aws/: lambda_handler.py  utils.py
operator/channels/: jiffy_channel.py  local_channel.py  redis_channel.py
src/: channel.h  constants.h  functors.h  main.cpp  output_buffers.h  partitioner.h  rate_limiter.cpp  rate_limiter.h  record.h  stream_operator.h  utils.h
tests/: stream_tests.py
